--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,70 +1,93 @@
-<form class="card" [formGroup]="form" (ngSubmit)="submit()">
-    <h2>Sign up to the admin panel</h2>
-  
-    <div class="alert alert-danger" *ngIf="authService?.error$ | async as error">{{ error }}</div>
-  
-    <div class="alert alert-info" *ngIf="message">{{ message }}</div>
-  
-    <div class="form-control" [ngClass]="{invalid: form.get('firstname')?.touched && form.get('firstname')?.invalid}">
-        <label for="firstname">FirstName: </label>
-        <input id="firstname" type="text" formControlName="firstname">
-        <div class="validation" *ngIf="form.get('firstname')?.touched && form.get('firstname')?.invalid">
-            <small *ngIf="form.get('firstname')?.errors?.required">Enter firstname field.</small>
-        </div>
-    </div>
+<style>
+    .account-form {
+        position: absolute;
+        width: 400px;
+        left: 50%;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+        border: 1px solid dimgray;
+        text-align: center;
+        padding: 10px;
+    }
 
-    <div class="form-control" [ngClass]="{invalid: form.get('lastname')?.touched && form.get('lastname')?.invalid}">
-        <label for="lastname">LastName: </label>
-        <input id="lastname" type="text" formControlName="lastname">
-        <div class="validation" *ngIf="form.get('lastname')?.touched && form.get('lastname')?.invalid">
-            <small *ngIf="form.get('lastname')?.errors?.required">Enter lastname field.</small>
-        </div>
-    </div>
+    .form-control:focus {
+        border-color: dimgray;
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0) inset, 0px 0px 8px rgba(0, 0, 0, 0);
+    }
+</style>
 
-    <div class="form-control" [ngClass]="{invalid: form.get('login')?.touched && form.get('login')?.invalid}">
-        <label for="login">UserName: </label>
-        <input id="login" type="text" formControlName="login">
-        <div class="validation" *ngIf="form.get('login')?.touched && form.get('login')?.invalid">
-            <small *ngIf="form.get('login')?.errors?.required">Enter UserName field.</small>
+<div class="account-form">
+    <h3>Sign up</h3>
+    <form [formGroup]="form" (ngSubmit)="submit()">
+    
+        <div class="alert alert-danger" *ngIf="authService?.error$ | async as error">{{ error }}</div>
+        <div class="alert alert-info" *ngIf="message">{{ message }}</div>
+      
+        <div class="form-group" [ngClass]="{invalid: form.get('firstname')?.touched && form.get('firstname')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="firstname">First Name: </label>
+            <input class="form-control" style="border-radius: 0px;" id="firstname" type="text" formControlName="firstname">
+            <div class="validation" *ngIf="form.get('firstname')?.touched && form.get('firstname')?.invalid">
+                <small *ngIf="form.get('firstname')?.errors?.required">Enter first name field.</small>
+            </div>
         </div>
-    </div>
-
-    <div class="form-control" [ngClass]="{invalid: form.get('email')?.touched && form.get('email')?.invalid}">
-        <label for="email">Email: </label>
-        <input id="email" type="email" formControlName="email">
-        <div class="validation" *ngIf="form.get('email')?.touched && form.get('email')?.invalid">
-            <small *ngIf="form.get('email')?.errors?.required">Enter email field.</small>
-            <small *ngIf="form.get('email')?.errors?.email">Invalid email.</small>
+    
+        <div class="form-group" [ngClass]="{invalid: form.get('lastname')?.touched && form.get('lastname')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="lastname">Last Name: </label>
+            <input class="form-control" style="border-radius: 0px;" id="lastname" type="text" formControlName="lastname">
+            <div class="validation" *ngIf="form.get('lastname')?.touched && form.get('lastname')?.invalid">
+                <small *ngIf="form.get('lastname')?.errors?.required">Enter last name field.</small>
+            </div>
         </div>
-    </div>
-  
-    <div class="form-control" [ngClass]="{invalid: form.get('password')?.touched && form.get('password')?.invalid}">
-        <label for="password">Password: </label>
-        <input id="password" type="password" formControlName="password">
-        <div class="validation" *ngIf="form.get('password')?.touched && form.get('password')?.invalid">
-            <small *ngIf="form.get('password')?.errors?.required">Enter password.</small>
-            <small *ngIf="form.get('password')?.errors?.minlength">
-                Password length must not be less than {{form.get('password')?.errors?.minlength.requiredLength}}.
-                Actual length is {{form.get('password')?.errors?.minlength.actualLength}}.
-            </small>
+    
+        <div class="form-group" [ngClass]="{invalid: form.get('login')?.touched && form.get('login')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="login">User Name: </label>
+            <input class="form-control" style="border-radius: 0px;" id="login" type="text" formControlName="login">
+            <div class="validation" *ngIf="form.get('login')?.touched && form.get('login')?.invalid">
+                <small *ngIf="form.get('login')?.errors?.required">Enter user name field.</small>
+            </div>
         </div>
-    </div>
-
-    <div class="form-control" [ngClass]="{invalid: form.get('confirmpassword')?.touched && form.get('confirmpassword')?.invalid}">
-        <label for="confirmpassword">ConfirmPassword: </label>
-        <input id="confirmpassword" type="password" formControlName="confirmpassword">
-        <div class="validation" *ngIf="form.get('confirmpassword')?.touched && form.get('confirmpassword')?.invalid">
-            <small *ngIf="form.get('confirmpassword')?.errors?.required">Confirm Password.</small>
+    
+        <div class="form-group" [ngClass]="{invalid: form.get('email')?.touched && form.get('email')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="email">Email: </label>
+            <input class="form-control" style="border-radius: 0px;" id="email" type="email" formControlName="email">
+            <div class="validation" *ngIf="form.get('email')?.touched && form.get('email')?.invalid">
+                <small *ngIf="form.get('email')?.errors?.required">Enter email field.</small>
+                <small *ngIf="form.get('email')?.errors?.email">Invalid email.</small>
+            </div>
         </div>
-    </div>
-
-    <div class="form-control" [ngClass]="{invalid: form.get('phonenumber')?.touched && form.get('phonenumber')?.invalid}">
-        <label for="phonenumber">PhoneNumber: </label>
-        <input id="phonenumber" type="text" formControlName="phonenumber">
-        <div class="validation" *ngIf="form.get('login')?.touched && form.get('phonenumber')?.invalid">
-            <small *ngIf="form.get('phonenumber')?.errors?.required">Enter PhoneNumber field.</small>
+      
+        <div class="form-group" [ngClass]="{invalid: form.get('password')?.touched && form.get('password')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="password">Password: </label>
+            <input class="form-control" style="border-radius: 0px;" id="password" type="password" formControlName="password">
+            <div class="validation" *ngIf="form.get('password')?.touched && form.get('password')?.invalid">
+                <small *ngIf="form.get('password')?.errors?.required">Enter password.</small>
+                <small *ngIf="form.get('password')?.errors?.minlength">
+                    Password length must not be less than {{form.get('password')?.errors?.minlength.requiredLength}}.
+                    Actual length is {{form.get('password')?.errors?.minlength.actualLength}}.
+                </small>
+            </div>
         </div>
-    </div>
-  
-    <button type="submit" class="btn btn-dark" [disabled]="form?.invalid || submitted">Log in</button>
-</form>
+    
+        <div class="form-group" [ngClass]="{invalid: form.get('confirmpassword')?.touched && form.get('confirmpassword')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="confirmpassword">Confirm Password: </label>
+            <input class="form-control" style="border-radius: 0px;" id="confirmpassword" type="password" formControlName="confirmpassword">
+            <div class="validation" *ngIf="form.get('confirmpassword')?.touched && form.get('confirmpassword')?.invalid">
+                <small *ngIf="form.get('confirmpassword')?.errors?.required">Confirm password.</small>
+            </div>
+        </div>
+    
+        <div class="form-group" [ngClass]="{invalid: form.get('phonenumber')?.touched && form.get('phonenumber')?.invalid}">
+            <label class="col-form-label" style="font-weight: bold" for="phonenumber">Phone Number: </label>
+            <input class="form-control" style="border-radius: 0px;" id="phonenumber" type="text" formControlName="phonenumber">
+            <div class="validation" *ngIf="form.get('login')?.touched && form.get('phonenumber')?.invalid">
+                <small *ngIf="form.get('phonenumber')?.errors?.required">Enter phone number field.</small>
+            </div>
+        </div>
+      
+        <div class="form-group">
+            <button type="submit" class="btn btn-block btn-outline-dark" style="border-radius: 0px;" [disabled]="form?.invalid || submitted">Sign up</button>
+            <a class="text-dark" [routerLink]="['/login']">Log in</a>
+        </div>
+    </form>
+</div>
