--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -1,7 +1,7 @@
 <style>
     .account-form {
         position: absolute;
-        width: 400px;
+        width: 600px;
         left: 50%;
         top: 50%;
         transform: translate(-50%, -50%);
@@ -24,19 +24,40 @@
         <div class="alert alert-danger" *ngIf="authService?.error$ | async as error">{{ error }}</div>
         <div class="alert alert-info" *ngIf="message">{{ message }}</div>
       
-        <div class="form-group" [ngClass]="{invalid: form.get('firstname')?.touched && form.get('firstname')?.invalid}">
-            <label class="col-form-label" style="font-weight: bold" for="firstname">First Name: </label>
-            <input class="form-control" style="border-radius: 0px;" id="firstname" type="text" formControlName="firstname">
-            <div class="validation" *ngIf="form.get('firstname')?.touched && form.get('firstname')?.invalid">
-                <small *ngIf="form.get('firstname')?.errors?.required">Enter first name field.</small>
+        <div class="form-group row">
+            <div class="form-group col-sm-6" [ngClass]="{invalid: form.get('firstname')?.touched && form.get('firstname')?.invalid}">
+                <label class="col-form-label" style="font-weight: bold" for="firstname">First Name: </label>
+                <input class="form-control" style="border-radius: 0px;" id="firstname" type="text" formControlName="firstname">
+                <div class="validation" *ngIf="form.get('firstname')?.touched && form.get('firstname')?.invalid">
+                    <small *ngIf="form.get('firstname')?.errors?.required">Enter first name field.</small>
+                </div>
+            </div>
+        
+            <div class="form-group col-sm-6" [ngClass]="{invalid: form.get('lastname')?.touched && form.get('lastname')?.invalid}">
+                <label class="col-form-label" style="font-weight: bold" for="lastname">Last Name: </label>
+                <input class="form-control" style="border-radius: 0px;" id="lastname" type="text" formControlName="lastname">
+                <div class="validation" *ngIf="form.get('lastname')?.touched && form.get('lastname')?.invalid">
+                    <small *ngIf="form.get('lastname')?.errors?.required">Enter last name field.</small>
+                </div>
             </div>
         </div>
-    
-        <div class="form-group" [ngClass]="{invalid: form.get('lastname')?.touched && form.get('lastname')?.invalid}">
-            <label class="col-form-label" style="font-weight: bold" for="lastname">Last Name: </label>
-            <input class="form-control" style="border-radius: 0px;" id="lastname" type="text" formControlName="lastname">
-            <div class="validation" *ngIf="form.get('lastname')?.touched && form.get('lastname')?.invalid">
-                <small *ngIf="form.get('lastname')?.errors?.required">Enter last name field.</small>
+        
+        <div class="form-group row">
+            <div class="form-group col-sm-6" [ngClass]="{invalid: form.get('email')?.touched && form.get('email')?.invalid}">
+                <label class="col-form-label" style="font-weight: bold" for="email">Email: </label>
+                <input class="form-control" style="border-radius: 0px;" id="email" type="email" formControlName="email">
+                <div class="validation" *ngIf="form.get('email')?.touched && form.get('email')?.invalid">
+                    <small *ngIf="form.get('email')?.errors?.required">Enter email field.</small>
+                    <small *ngIf="form.get('email')?.errors?.email">Invalid email.</small>
+                </div>
+            </div>
+
+            <div class="form-group col-sm-6" [ngClass]="{invalid: form.get('phonenumber')?.touched && form.get('phonenumber')?.invalid}">
+                <label class="col-form-label" style="font-weight: bold" for="phonenumber">Phone Number: </label>
+                <input class="form-control" style="border-radius: 0px;" id="phonenumber" type="text" formControlName="phonenumber">
+                <div class="validation" *ngIf="form.get('login')?.touched && form.get('phonenumber')?.invalid">
+                    <small *ngIf="form.get('phonenumber')?.errors?.required">Enter phone number field.</small>
+                </div>
             </div>
         </div>
     
@@ -45,15 +66,6 @@
             <input class="form-control" style="border-radius: 0px;" id="login" type="text" formControlName="login">
             <div class="validation" *ngIf="form.get('login')?.touched && form.get('login')?.invalid">
                 <small *ngIf="form.get('login')?.errors?.required">Enter user name field.</small>
-            </div>
-        </div>
-    
-        <div class="form-group" [ngClass]="{invalid: form.get('email')?.touched && form.get('email')?.invalid}">
-            <label class="col-form-label" style="font-weight: bold" for="email">Email: </label>
-            <input class="form-control" style="border-radius: 0px;" id="email" type="email" formControlName="email">
-            <div class="validation" *ngIf="form.get('email')?.touched && form.get('email')?.invalid">
-                <small *ngIf="form.get('email')?.errors?.required">Enter email field.</small>
-                <small *ngIf="form.get('email')?.errors?.email">Invalid email.</small>
             </div>
         </div>
       
@@ -74,14 +86,6 @@
             <input class="form-control" style="border-radius: 0px;" id="confirmpassword" type="password" formControlName="confirmpassword">
             <div class="validation" *ngIf="form.get('confirmpassword')?.touched && form.get('confirmpassword')?.invalid">
                 <small *ngIf="form.get('confirmpassword')?.errors?.required">Confirm password.</small>
-            </div>
-        </div>
-    
-        <div class="form-group" [ngClass]="{invalid: form.get('phonenumber')?.touched && form.get('phonenumber')?.invalid}">
-            <label class="col-form-label" style="font-weight: bold" for="phonenumber">Phone Number: </label>
-            <input class="form-control" style="border-radius: 0px;" id="phonenumber" type="text" formControlName="phonenumber">
-            <div class="validation" *ngIf="form.get('login')?.touched && form.get('phonenumber')?.invalid">
-                <small *ngIf="form.get('phonenumber')?.errors?.required">Enter phone number field.</small>
             </div>
         </div>
       
