--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -1,1 +1,167 @@
-<p>catalog works!</p>
+<style>
+    .control-menu {
+    float: left;
+    width: 300px;
+}
+
+.form-menu {
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
+    padding: 10px;
+    border: 1px solid dimgray;
+}
+
+.products {
+    list-style: none;
+    margin: 0 -20px 0 0;
+    padding: 0;
+}
+
+.product-wrapper {
+    display: block;
+    width: 100%;
+    float: left;
+    transition: width .2s;
+}
+
+@media only screen and (min-width: 450px) {
+    .product-wrapper {
+        width: 75%;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .product-wrapper {
+        width: 50%;
+    }
+}
+
+@media only screen and (min-width: 1000px) {
+    .product-wrapper {
+        width: 25%;
+    }
+}
+
+.product {
+    width: 200px;
+    display: inline-block;
+    border: 1px solid dimgray;
+    position: relative;
+    background: #fff;
+    margin: 0 10px 10px 0;
+    text-decoration: none;
+    z-index: 0;
+    box-sizing: border-box;
+    padding: 10px;
+}
+
+    .product:hover {
+        box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
+    }
+
+.product-photo {
+    position: relative;
+    margin-top: 10px;
+    padding-bottom: 100%;
+    overflow: hidden;
+}
+
+    .product-photo img {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        max-width: 100%;
+        max-height: 100%;
+        margin: auto;
+        transition: transform .4s ease-out;
+    }
+
+.product:hover .product-photo img {
+    transform: scale(1.50);
+}
+
+.form-control:focus {
+    border-color: dimgray;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0) inset, 0px 0px 8px rgba(0, 0, 0, 0);
+}
+</style>
+
+<div class="control-menu">
+    <div class="form-menu">
+        <h3>Catalog</h3>
+        <hr style="background-color: dimgray; height: 1px;" />
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label" style="font-weight: bold">Search</label>
+            <div class="col-sm-8">
+                <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
+            </div>
+        </div>
+        <hr style="background-color: dimgray; height: 1px;" />
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label" style="font-weight: bold">Order</label>
+            <div class="col-sm-8">
+                <input class="form-control" style="border-radius: 0px;" type="text" id="order" (change)="order()" />
+            </div>
+        </div>
+        <hr style="background-color: dimgray; height: 1px;" />
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label" style="font-weight: bold">Currency</label>
+            <div class="col-sm-8">
+                <select class="form-control" style="border-radius: 0px;" id="currency" (change)="currencyChange()">
+                    <option value="EUR">EUR</option>
+                    <option value="USD">USD</option>
+                    <option value="RUB">RUB</option>
+                    <option value="BYN">BYN</option>
+                </select>
+            </div>
+        </div>
+        <hr style="background-color: dimgray; height: 1px;" />
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label" style="font-weight: bold">Category</label>
+            <div class="col-sm-8">
+                <select *ngIf="categories | async as categories$; else loading" class="form-control" style="border-radius: 0px;" id="category" (change)="setCategory()">
+                    <option value="0">All</option>
+                    <option *ngFor="let category of categories$" value="{{category.Id}}">{{category.Name}}</option>
+                </select>
+            </div>
+        </div>
+        <hr style="background-color: dimgray; height: 1px;" />
+        <div class="form-group row">
+            <label class="col-sm-4 col-form-label" style="font-weight: bold">Provider</label>
+            <div class="col-sm-8">
+                <select *ngIf="providers | async as providers$; else loading" class="form-control" style="border-radius: 0px;" id="provider" (change)="setProvider()">
+                    <option value="0">All</option>
+                    <option *ngFor="let provider of providers$" value="{{provider.Id}}">{{provider.Name}}</option>
+                </select>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div style="margin-left: 320px; margin-bottom: 60px;" *ngIf="products | async as products$; else loading">
+    <ul class="products clearfix">
+        <li class="product-wrapper" *ngFor="let product of products$">
+            <div class="product">
+                <div class="product-photo">
+                    <img src="assets/img/products/default.png" width="128" alt="Preview Image" />
+                </div>
+                <div>
+                    <h4 style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">{{product.Name}}</h4>
+                    <p style="overflow: hidden; white-space: nowrap; text-overflow: ellipsis;">
+                        <b>Cost: </b><span>{{product.Cost}}</span><br>
+                        <b>Category: </b><span>{{product.Category}}</span><br>
+                        <b>Provider: </b><span>{{product.Provider}}</span><br>
+                    </p>
+                </div>
+                <div>
+                    <a class="btn btn-block btn-outline-dark" style="border-radius: 0px;">Detail</a>
+                </div>
+            </div>
+        </li>
+    </ul>
+</div>
+
+<ng-template #loading>
+    <span>Loading...</span>
+</ng-template>
