--- a/src/app/pages/management/products/products.component.html
+++ b/src/app/pages/management/products/products.component.html
@@ -14,75 +14,75 @@
         box-shadow: 0px 1px 1px rgba(0, 0, 0, 0) inset, 0px 0px 8px rgba(0, 0, 0, 0);
     }
 </style>
+
 <div class="main-container">
-    <button class="btn btn-block btn-outline-dark" style="border-radius: 0px;" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Filters</button>
-    <div class="collapse" id="collapseExample">
-        <div>
-            <div class="container form-menu">
-                <div class="form-group row">
-                    <div class="col-sm-6 form-group row">
-                        <label class="col-sm-2 col-form-label" style="font-weight: bold">Search</label>
-                        <div class="col-sm-6">
-                            <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
-                        </div>
-                    </div>
-                    <div class="col-sm-6 form-group row">
-                        <label class="col-sm-2 col-form-label" style="font-weight: bold">Order</label>
-                        <div class="col-sm-6">
-                            <input class="form-control" style="border-radius: 0px;" type="text" id="order" (change)="order()" />
-                        </div>
-                    </div>
-                </div>
-                
-                <hr style="background-color: dimgray; height: 1px;" />
-        
-                <div class="form-group row">
-                    <div class="col-sm-6 form-group row">
-                        <label class="col-sm-2 col-form-label" style="font-weight: bold">Category</label>
-                        <div class="col-sm-6">
-                            <select *ngIf="categories | async as categories$; else loading" class="form-control" style="border-radius: 0px;" id="category" (change)="setCategory()">
-                                <option value="0">All</option>
-                                <option *ngFor="let category of categories$" value="{{category.Id}}">{{category.Name}}</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="col-sm-6 form-group row">
-                        <label class="col-sm-2 col-form-label" style="font-weight: bold">Provider</label>
-                        <div class="col-sm-6">
-                            <select *ngIf="providers | async as providers$; else loading" class="form-control" style="border-radius: 0px;" id="provider" (change)="setProvider()">
-                                <option value="0">All</option>
-                                <option *ngFor="let provider of providers$" value="{{provider.Id}}">{{provider.Name}}</option>
-                            </select>
-                        </div>
-                    </div>
-                </div>
-        
-                <hr style="background-color: dimgray; height: 1px;" />
-        
-                <div class="form-group row">
-                    <label class="col-sm-4 col-form-label" style="font-weight: bold">Currency</label>
-                    <div class="col-sm-4">
-                        <select class="form-control" style="border-radius: 0px;" id="currency" (change)="currencyChange()">
-                            <option value="EUR">EUR</option>
-                            <option value="USD">USD</option>
-                            <option value="RUB">RUB</option>
-                            <option value="BYN">BYN</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
+    <div class="row no-gutters" style="border: 1px solid dimgray; box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);">
+        <div class="col-12 col-sm-6 col-md-8">
+            <h4>Products List</h4>
+        </div>
+        <div class="col-6 col-md-2">
+            <a class="btn btn-block btn-outline-dark" style="border-radius: 0px;">Add</a>
+        </div>
+        <div class="col-6 col-md-2">
+            <button class="btn btn-block btn-outline-dark" style="border-radius: 0px;" type="button" data-toggle="collapse" data-target="#collapseExample" aria-expanded="false" aria-controls="collapseExample">Filters</button>
         </div>
     </div>
 
-    <div>
-        <div class="row no-gutters" style="border: 1px solid dimgray">
-            <div class="col-12 col-sm-6 col-md-8">
-                <h4>Products list</h4>
+    <div class="collapse" id="collapseExample">
+        
+            <div class="container form-menu">
+                
+                <div class="form-group row">
+
+                    <div class="col-sm-6 form-group">
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" style="font-weight: bold">Search</label>
+                            <div class="col-sm-10">
+                                <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-2 col-form-label" style="font-weight: bold">Order</label>
+                            <div class="col-sm-10">
+                                <input class="form-control" style="border-radius: 0px;" type="text" id="order" (change)="order()" />
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-sm-6 form-group">
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" style="font-weight: bold">Category</label>
+                            <div class="col-sm-8">
+                                <select *ngIf="categories | async as categories$; else loading" class="form-control" style="border-radius: 0px;" id="category" (change)="setCategory()">
+                                    <option value="0">All</option>
+                                    <option *ngFor="let category of categories$" value="{{category.Id}}">{{category.Name}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" style="font-weight: bold">Provider</label>
+                            <div class="col-sm-8">
+                                <select *ngIf="providers | async as providers$; else loading" class="form-control" style="border-radius: 0px;" id="provider" (change)="setProvider()">
+                                    <option value="0">All</option>
+                                    <option *ngFor="let provider of providers$" value="{{provider.Id}}">{{provider.Name}}</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <label class="col-sm-4 col-form-label" style="font-weight: bold">Currency</label>
+                            <div class="col-sm-8">
+                                <select class="form-control" style="border-radius: 0px;" id="currency" (change)="currencyChange()">
+                                    <option value="EUR">EUR</option>
+                                    <option value="USD">USD</option>
+                                    <option value="RUB">RUB</option>
+                                    <option value="BYN">BYN</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                   
+                </div>
             </div>
-            <div class="col-6 col-md-4">
-                <a class="btn btn-block btn-outline-dark" style="border-radius: 0px;">Add</a>
-            </div>
-          </div>
     </div>
 
     <div *ngIf="products | async as products$; else loading">
