--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,5 +1,5 @@
 <footer class="border-top footer text-muted bg-white">
     <div class="container">
-        &copy; 2021 - <a class="text-dark">&laquo;test&raquo;</a>
+        &copy; 2021 - <a class="text-dark" [routerLink]="['privacy']">&laquo;Privacy&raquo;</a>
     </div>
 </footer>
