--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -1,4 +1,28 @@
 <style>
+
+.pagination {
+    display: inline-block;
+  }
+  
+  .pagination a {
+    background-color: white;
+    float: left;
+    padding: 8px 16px;
+    text-decoration: none;
+    color: black;
+    border: 1px solid dimgray;
+  }
+  
+  .pagination a.active {
+    background-color: var(--dark-color);
+    color: white;
+  }
+  
+  .pagination a:hover:not(.active) {
+      background-color: dimgray;
+      color: white;
+    }
+
 .control-menu {
     float: left;
     width: 300px;
@@ -120,9 +144,9 @@
         <div class="form-group row">
             <label class="col-sm-4 col-form-label" style="font-weight: bold">Category</label>
             <div class="col-sm-8">
-                <select *ngIf="categories | async as categories$; else loading" class="form-control" style="border-radius: 0px;" id="category" (change)="setCategory()">
+                <select *ngIf="categories$ | async as categories; else loading" class="form-control" style="border-radius: 0px;" id="category" (change)="setCategory()">
                     <option value="0">All</option>
-                    <option *ngFor="let category of categories$" value="{{category.Id}}">{{category.Name}}</option>
+                    <option *ngFor="let category of categories" value="{{category.Id}}">{{category.Name}}</option>
                 </select>
             </div>
         </div>
@@ -130,18 +154,29 @@
         <div class="form-group row">
             <label class="col-sm-4 col-form-label" style="font-weight: bold">Provider</label>
             <div class="col-sm-8">
-                <select *ngIf="providers | async as providers$; else loading" class="form-control" style="border-radius: 0px;" id="provider" (change)="setProvider()">
+                <select *ngIf="providers$ | async as providers; else loading" class="form-control" style="border-radius: 0px;" id="provider" (change)="setProvider()">
                     <option value="0">All</option>
-                    <option *ngFor="let provider of providers$" value="{{provider.Id}}">{{provider.Name}}</option>
+                    <option *ngFor="let provider of providers" value="{{provider.Id}}">{{provider.Name}}</option>
                 </select>
             </div>
         </div>
     </div>
+    <div>
+        <div class="pagination">
+            <a (click)="leftPage()">&laquo;</a>
+            <a>{{this.params.PageNumber}}</a>
+            <a (click)="rightPage()">&raquo;</a>
+        </div>
+        <!--<app-pagination></app-pagination>-->
+    </div>
 </div>
 
-<div style="margin-left: 320px; margin-bottom: 60px;" *ngIf="products | async as products$; else loading">
+
+<div style="margin-left: 320px; margin-bottom: 60px;" >
+    
+    <div *ngIf="products?.length==0">No records found.</div>
     <ul class="products clearfix">
-        <li class="product-wrapper" *ngFor="let product of products$">
+        <li class="product-wrapper" *ngFor="let product of products">
             <div class="product">
                 <div class="product-photo">
                     <img src="assets/img/products/default.png" width="128" alt="Preview Image" />
