--- a/src/app/pages/management/categories/categories.component.html
+++ b/src/app/pages/management/categories/categories.component.html
@@ -58,11 +58,12 @@
     <div *ngFor="let category of categories$">
       <div class="item-container" >
         <div>
+          <span style="padding-right: 10px;">
+            <a class="btn btn-outline-dark" style="border-radius: 0px;">Update</a>
+            <a class="btn btn-outline-dark" style="border-radius: 0px;">Delete</a>
+          </span>
             <b>Name: </b><span>{{category.Name}}</span>
-            <span style="padding-left: 10px;">
-              <a class="btn btn-outline-dark" style="border-radius: 0px;">Update</a>
-              <a class="btn btn-outline-dark" style="border-radius: 0px;">Delete</a>
-            </span>
+            
         </div>
     </div>
     <div style="margin-top: 10px"></div>
