--- a/src/app/pages/management/providers/providers.component.html
+++ b/src/app/pages/management/providers/providers.component.html
@@ -1,39 +1,5 @@
 <style>
-  .main-container {
-      margin-right: 180px;
-  }
-
-  .control-menu {
-      float: left;
-      width: 300px;
-  }
-
-  .form-menu {
-      box-shadow: 0 0 4px rgba(0, 0, 0, 0.5);
-      padding: 10px;
-      border: 1px solid dimgray;
-  }
-
-  .items-container {
-      float: left;
-      margin-left: 20px;
-      margin-bottom: 60px;
-  }
-
-  .item-container {
-      padding: 10px;
-      border: 1px solid dimgray;
-      width: 600px;
-  }
-
-      .item-container:hover {
-          box-shadow: 0 0 12px rgba(0, 0, 0, 0.5);
-      }
-
-  .form-control:focus {
-      border-color: dimgray;
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0) inset, 0px 0px 8px rgba(0, 0, 0, 0);
-  }
+  
 </style>
 
 <div class="main-container">
@@ -52,10 +18,17 @@
                   <input class="form-control" style="border-radius: 0px;" type="search" id="search" (input)="search()" />
               </div>
       </div>
+      <div>
+        <div class="pagination">
+          <a (click)="leftPage()">&laquo;</a>
+          <a>{{this.params.PageNumber}}</a>
+          <a (click)="rightPage()">&raquo;</a>
+      </div>
+      </div>
   </div>
 
-  <div class="items-container" *ngIf="providers | async as providers$; else loading">
-    <div *ngFor="let provider of providers$">
+  <div class="items-container">
+    <div *ngFor="let provider of providers">
       <div class="item-container" >
         <div>
           <span style="padding-right: 10px;">
