--- a/src/app/pages/catalog/catalog.component.html
+++ b/src/app/pages/catalog/catalog.component.html
@@ -78,7 +78,7 @@
             </p>
           </div>
           <div>
-            <a class="btn btn-block btn-outline-dark" style="border-radius: 0px;">Detail</a>
+            <a class="btn btn-block btn-outline-dark" style="border-radius: 0px;" [routerLink]="['item-detail', product.Id]">Detail</a>
           </div>
         </div>
       </li>
