--- a/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
+++ b/src/app/pages/catalog/catalog-item-detail/catalog-item-detail.component.html
@@ -1,1 +1,10 @@
-<p>catalog-item-detail works!</p>
+<div *ngIf="product | async as prod; else loading">
+  <span>Name: {{prod.Name}}</span><br>
+  <span>Description: {{prod.Description}}</span><br>
+  <span>Provider: {{prod.Provider}}</span><br>
+  <span>Category: {{prod.Category}}</span>
+</div>
+
+<ng-template #loading>
+  <span>Loading...</span>
+</ng-template>
